--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPalPractice">
+        <activity android:name=".BaseActivity"></activity>
         <activity
             android:name=".RegisterActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MyShopPalPractice.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar"></activity>
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
