--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myshoppalpractice">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,11 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPalPractice">
+        <activity android:name=".UserProfileActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar">
+
+        </activity>
         <activity
             android:name=".ForgotPasswordActivity"
             android:label=""
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MyShopPalPractice.NoActionBar">
+
         </activity>
         <activity android:name=".BaseActivity" />
         <activity
