--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPalPractice">
-        <activity android:name=".UserProfileActivity"
+        <activity
+            android:name=".DashboardActivity"
+            android:label="@string/title_activity_dashboard"></activity>
+        <activity
+            android:name=".UserProfileActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MyShopPalPractice.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar"></activity>
         <activity
             android:name=".ForgotPasswordActivity"
             android:label=""
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MyShopPalPractice.NoActionBar">
-
-        </activity>
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar"></activity>
         <activity android:name=".BaseActivity" />
         <activity
             android:name=".RegisterActivity"
