--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyShopPalPractice">
+        <activity android:name=".SoldProductDetailsActivity"></activity>
+        <activity android:name=".AddProductActivity" />
         <activity
             android:name=".DashboardActivity"
-            android:label="@string/title_activity_dashboard"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".UserProfileActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MyShopPalPractice.NoActionBar"></activity>
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:label=""
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.MyShopPalPractice.NoActionBar"></activity>
+            android:theme="@style/Theme.MyShopPalPractice.NoActionBar" />
         <activity android:name=".BaseActivity" />
         <activity
             android:name=".RegisterActivity"
